// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositFailureNotice Renders Renders DepositFailureNotice component correctly 1`] = `
<div>
  <div
    class="wcpay-inline-notice wcpay-inline-warning-notice deposit-failure-notice components-notice is-warning"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-1lvwia0-View-Flex-base-ItemsRow e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Payouts are currently paused because a recent payout failed. Please 
          <a
            class="components-external-link"
            href="https://example.com?from=WCPAY_PAYOUTS&source=wcpay-payout-failure-notice"
            rel="external noreferrer noopener"
            target="_blank"
          >
            update your bank account details
            <span
              class="components-visually-hidden css-1mm2cvy-View e19lxcc00"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              (opens in a new tab)
            </span>
            <svg
              aria-hidden="true"
              class="components-external-link__icon css-16iaek2-StyledIcon esh4a730"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 4.5h-7V6h4.44l-5.97 5.97 1.06 1.06L18 7.06v4.44h1.5v-7Zm-13 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-3H17v3a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h3V5.5h-3Z"
              />
            </svg>
          </a>
          .
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;

exports[`Deposits Overview information Component Renders 1`] = `
<div>
  <div
    class="components-surface components-card wcpay-deposits-overview css-nsno0f-View-Surface-getBorders-primary-Card-rounded e19lxcc00"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content e19lxcc00"
    >
      <div
        class="components-flex components-card__header components-card-header css-3fkkv8-View-Flex-base-ItemsRow-Header-borderRadius-borderColor-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Payouts
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__schedule__container css-1nwhnu3-View-Body-borderRadius-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Available funds are automatically dispatched 
        <strong>
          every Monday
        </strong>
        .
        <button
          class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
          type="button"
        >
          <div
            class="wcpay-tooltip__content-wrapper"
          >
            <div
              aria-label="Payout schedule tooltip"
              role="button"
              tabindex="0"
            >
              <svg
                class="gridicon gridicons-help-outline"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__notices__container css-1nwhnu3-View-Body-borderRadius-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      />
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__heading css-1nwhnu3-View-Body-borderRadius-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <span
          class="wcpay-deposits-overview__heading__title"
        >
          Payout history
        </span>
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__table__container css-1nwhnu3-View-Body-borderRadius-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex wcpay-deposits-overview__table__row__header css-j6raph-View-Flex-base-ItemsRow e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Dispatch date
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Status
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Amount
          </div>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="components-divider components-card__divider components-card-divider css-yo8r29-DividerView-renderBorder-renderSize-renderMargin-Divider-borderColor e19on6iw0"
        data-wp-c16t="true"
        data-wp-component="CardDivider"
        role="separator"
      />
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__table__container css-1nwhnu3-View-Body-borderRadius-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex wcpay-deposits-overview__table__row css-j6raph-View-Flex-base-ItemsRow e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              size="17"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm.5 16c0 .3-.2.5-.5.5H5c-.3 0-.5-.2-.5-.5V7h15v12zM9 10H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm4 0h-2v2h2v-2zm-4 4h-2v2h2v-2zm4 0h-2v2h2v-2z"
              />
            </svg>
            <a
              data-link-type="wc-admin"
              href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
            >
              January 2, 2020
            </a>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <span
              class="chip chip-success"
            >
              Completed (paid)
            </span>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            $20.00
          </div>
        </div>
        <div
          class="components-flex wcpay-deposits-overview__table__row css-j6raph-View-Flex-base-ItemsRow e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              size="17"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm.5 16c0 .3-.2.5-.5.5H5c-.3 0-.5-.2-.5-.5V7h15v12zM9 10H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm4 0h-2v2h2v-2zm-4 4h-2v2h2v-2zm4 0h-2v2h2v-2z"
              />
            </svg>
            <a
              data-link-type="wc-admin"
              href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
            >
              January 3, 2020
            </a>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <span
              class="chip chip-warning"
            >
              Pending
            </span>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            $30.00
          </div>
        </div>
        <div
          class="components-flex wcpay-deposits-overview__table__row css-j6raph-View-Flex-base-ItemsRow e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              size="17"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm.5 16c0 .3-.2.5-.5.5H5c-.3 0-.5-.2-.5-.5V7h15v12zM9 10H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm4 0h-2v2h2v-2zm-4 4h-2v2h2v-2zm4 0h-2v2h2v-2z"
              />
            </svg>
            <a
              data-link-type="wc-admin"
              href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
            >
              January 4, 2020
            </a>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <span
              class="chip chip-success"
            >
              Completed (deducted)
            </span>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base e19lxcc00"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            $40.00
          </div>
        </div>
      </div>
      <div
        class="components-flex components-card__footer components-card-footer wcpay-deposits-overview__footer css-120suhd-View-Flex-base-ItemsRow-Footer-borderRadius-borderColor-medium e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
      >
        <button
          class="components-button is-secondary"
          type="button"
        >
          View full payout history
        </button>
        <a
          class="components-button is-tertiary"
          href="admin.php?page=wc-settings&tab=checkout&section=woocommerce_payments#payout-schedule"
        >
          Change payout schedule
        </a>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-15t1t3g-View-Elevation-sx-Base-elevationClassName e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-15t1t3g-View-Elevation-sx-Base-elevationClassName e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Suspended Deposit Notice Renders Component Renders 1`] = `
<div>
  <div
    class="wcpay-inline-notice wcpay-inline-warning-notice wcpay-deposits-overview__suspended-notice components-notice is-warning"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-1lvwia0-View-Flex-base-ItemsRow e19lxcc00"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base e19lxcc00"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Your payouts are 
          <strong>
            temporarily suspended
          </strong>
          . 
          <a
            data-link-type="wc-admin"
            href="https://woocommerce.com/document/woopayments/payouts/why-payouts-suspended/"
          >
            Learn more
          </a>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
